[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme_test.tres" type="Theme" id=1]
[ext_resource path="res://LoadFileButton.gd" type="Script" id=2]
[ext_resource path="res://hair00.png" type="Texture" id=3]

[node name="LoadFileButton" type="Button"]
margin_right = 200.0
margin_bottom = 25.0
rect_min_size = Vector2( 400, 25 )
theme = ExtResource( 1 )
text = "File Name"
icon = ExtResource( 3 )
clip_text = true
align = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 201.0
margin_right = 501.0
margin_bottom = 25.0
rect_min_size = Vector2( 300, 25 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HBoxContainer"]
anchor_left = -0.0466667
anchor_top = 0.2
anchor_right = -0.0466667
anchor_bottom = 0.2
margin_right = 200.0
margin_bottom = 15.0
rect_min_size = Vector2( 200, 10 )

[node name="RoomLabel" type="Label" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Room:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomValueLabel" type="Label" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "FILE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeValueLabel" type="Label" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.63
margin_top = -0.561234
margin_right = -2.63
margin_bottom = 4.43877
text = "TIME"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="." to="." method="_on_LoadFileButton_pressed"]
